# libkdtree

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bat  demo.cpp
python/: benchmark.py  demo.py  setup.py  test.py
python/kdtree/: __init__.py  core.py
src/: kdtree.cpp  kdtree.h
